objects/User.object
<CustomObject>
    <fields>
        <fullName>GlobalKey__c</fullName>
        <label>GlobalKey</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__API_URL__c</fullName>
        <formula>$Api.Partner_Server_URL_290</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Hide_Copado_feedback__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>The visibility of the message asking users to rate &amp; feedback Copado on the AppExchange is controlled here.</inlineHelpText>
        <label>Hide Copado feedback</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Show_Copado_Tips__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Show Copado Tips</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Work_Manager_Panels__c</fullName>
        <description>JSON containing current user panels on the Backlog</description>
        <label>Work Manager Panels</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DocuSignEmail__c</fullName>
        <label>DocuSign Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__GlobalKey__c</fullName>
        <description>The globally unique identifier of the Product. Used to identify the product across Salesforce instances.</description>
        <label>Global Key</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OMplusSyncEnabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable OM+ sync for this user</description>
        <inlineHelpText>If checked a user will be marked for export to OMplus platform. User will be enabled in OMplus once catalog synchronisation job is complete in Vlocity XOM Administration tab.</inlineHelpText>
        <label>OMplus Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OMplus_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable User in OMplus platform</description>
        <inlineHelpText>If checked a user will be marked for export to OMplus platform. User will be enabled in OMplus once catalog synchronisation job is complete in Vlocity XOM Administration tab.</inlineHelpText>
        <label>OMplus Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__StoreAssociateStatus__c</fullName>
        <label>Store Associate Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Clocked In</fullName>
                </value>
                <value>
                    <fullName>Clocked Out</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <label>Admin Users</label>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
    </listViews>
    <sharingModel>Read</sharingModel>
</CustomObject>